Wed Jun 29 13:55:36 2011  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* variable.c (rb_const_get_0): should not look for superclasses if
	  the second optional argument is given for #const_get().
	  fix [Bug #3422] [Bug #3423]

Wed Jun 29 12:07:27 2011  Eric Hodel  <drbrain@segment7.net>

	* math.c:  Attach documentation for Math.
	* object.c:  Document NIL, TRUE, FALSE.
	* io.c:  Improve grammar in ARGF comment.  Document STDIN/OUT/ERR.
	  Document ARGF global constant.
	* lib/rake:  Hide deprecated toplevel constants from RDoc (import from
	  rake trunk).
	* lib/thwait.rb:  Document ThWait.
	* lib/mathn.rb:  Hide Math redefinition from RDoc
	* lib/sync.rb:  Add a basic comment for Sync_m, Synchronizer_m, Sync,
	  Synchronizer.
	* parse.y:  Document SCRIPT_LINES__.
	* hash.c:  Document ENV class and global constant.
	* vm.c:  Document TOPLEVEL_BINDING.
	* version.c:  Document RUBY_* constants.
	* ruby.c:  Document DATA and ARGV.

Wed Jun 29 10:13:12 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Matrix.zero can build rectangular matrices.
	  Vector#r should be called #magnitude

Wed Jun 29 10:11:08 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Add Matrix#diagonal?, hermitian?, normal?,
	  orthogonal?
	  permutation?, symmetric?, {lower|upper}triangular?, unitary?, zero?

Wed Jun 29 10:09:35 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Specialize Matrix#find_index to return [row, col]
	  and accept the same optional argument as #each

Wed Jun 29 10:07:32 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Matrix#each{_with_index} can iterate over a subset
	  of the Matrix

Wed Jun 29 06:21:02 2011  Koichi Sasada  <ko1@atdot.net>

	* thread_pthread.c (native_stop_timer_thread): skip to close
	  communication pipe to avoid timing bug (process termination timing).
	  The communication pipe will closed by OS.

Wed Jun 29 06:09:54 2011  Koichi Sasada  <ko1@atdot.net>
